@@ -1,3 +1,8 @@
+2004-03-16  Saito <saito@intaa.net>
+
+	* timidity/reverb.c, timidity/playmidi.c:
+	  Bug fix.
+
 2004-03-15  Saito <saito@intaa.net>
 
 	* interface/w32g.h, interface/w32g_i.c, interface/w32g_c.c:
